tests/rosetta/out/Smalltalk/amb.out
/tmp/amb.st:12: parse error, expected ']'
